fix EditCase dropping data,read record

--- a/FloridaUCTF/Views/Home/AddCase.cshtml
+++ b/FloridaUCTF/Views/Home/AddCase.cshtml
@@ -4,7 +4,8 @@
 	ViewBag.Title = "Add a Case";
 }
 
-<h2>Add a Case for @Model.Offender.FirstName @Model.Offender.LastName  </h2>
+<h3>Add Case   </h3>
+@Model.Offender.FirstName @Model.Offender.LastName
 
 @using (Html.BeginForm())
 {
