--- a/FloridaUCTF/Views/Home/AllOffenderDetail.cshtml
+++ b/FloridaUCTF/Views/Home/AllOffenderDetail.cshtml
@@ -13,7 +13,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="row">
-				@Html.ActionLink("Edit Offender", "EditOffender", new { id = Model.Id }, new { @class = "btn btn-info" }) |
+				@Html.ActionLink("Edit Offender", "EditOffender", new { offenderId = Model.Id }, new { @class = "btn btn-info" }) |
 				@Html.ActionLink("Add New Case", "AddCase", new { offenderId = Model.Id }, new { @class = "btn btn-info" }) |
 				@Html.ActionLink("Back to Search", "Index", null, new { @class = "btn btn-default" })
 			</div>
