--- a/FloridaUCTF/Views/Home/_EditCitation.cshtml
+++ b/FloridaUCTF/Views/Home/_EditCitation.cshtml
@@ -9,6 +9,7 @@
 		<hr />
 		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 		@Html.HiddenFor(model => model.Id)
+		@Html.HiddenFor(model => model.CaseId)
 		<div class="row">
 			<div class="col-md-4">
 				<div class="form-group">
